--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,17 +9,17 @@ import { Image } from "astro:assets";
   <div class="absolute inset-0 bg-grid-pattern z-0"></div>
   <div class="geometric-lines">
     <div
-      class="line w-full h-[1px] top-1/4 left-0 animate-pulse"
+      class="line w-full h-px top-1/4 left-0 animate-pulse"
       style="animation-duration: 3s;"
     >
     </div>
     <div
-      class="line w-[1px] h-full top-0 left-1/3 animate-pulse"
+      class="line w-px h-full top-0 left-1/3 animate-pulse"
       style="animation-duration: 4s;"
     >
     </div>
     <div
-      class="line w-full h-[1px] bottom-1/3 left-0 animate-pulse"
+      class="line w-full h-px bottom-1/3 left-0 animate-pulse"
       style="animation-duration: 5s;"
     >
     </div>
@@ -47,7 +47,7 @@ import { Image } from "astro:assets";
       >
         Turn your idea into a <br />
         <span
-          class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-secondary"
+          class="text-transparent bg-clip-text bg-linear-to-r from-primary to-secondary"
           >working product</span
         >
         in 7 days.
