--- a/src/components/Offer.astro
+++ b/src/components/Offer.astro
@@ -44,7 +44,7 @@
           </div>
 
           <a
-            href="mailto:contact@cogitosoftware.com"
+            href="/contact"
             class="btn btn-primary btn-lg w-full md:w-auto shadow-lg shadow-primary/20"
           >
             Start Your Project
