--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -63,8 +63,8 @@ import Layout from "../layouts/Layout.astro";
         <h3>7. Contact Us</h3>
         <p>
           If you have any questions about this Privacy Policy, please contact us
-          at <a href="mailto:hello@cogitosoftware.com"
-            >hello@cogitosoftware.com</a
+          at <a href="mailto:cogitoteamdev@gmail.com"
+            >cogitoteamdev@gmail.com</a
           >.
         </p>
       </div>
