--- a/src/pages/terms-and-conditions.astro
+++ b/src/pages/terms-and-conditions.astro
@@ -59,7 +59,7 @@ import Layout from "../layouts/Layout.astro";
         <h3>6. Contact Us</h3>
         <p>
           If you have any questions about these Terms, please contact us at <a
-            href="mailto:hello@cogitosoftware.com">hello@cogitosoftware.com</a
+            href="mailto:cogitoteamdev@gmail.com">cogitoteamdev@gmail.com</a
           >.
         </p>
       </div>
