--- a/src/pages/custom-solution.astro
+++ b/src/pages/custom-solution.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import { Cpu, Database, Network } from "@lucide/astro";
 ---
 
-<Layout title="Custom Solutions | Cogito Software">
+<Layout path="/custom-solution" title="Custom Solutions | Cogito Software">
   <main class="relative min-h-screen flex flex-col">
     <section
       class="grow flex items-center justify-center relative overflow-hidden py-20"
