--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Layout from "../layouts/Layout.astro";
 import Portfolio from "../components/Portfolio.astro";
 ---
 
-<Layout title="Cogito Software | No Useless Software">
+<Layout path="/" title="Cogito Software | No Useless Software">
   <main class="relative min-h-screen flex flex-col overflow-hidden">
     <!-- Background Elements -->
     <div class="absolute inset-0 bg-base-100 z-0">
