--- a/src/pages/mvp-offer.astro
+++ b/src/pages/mvp-offer.astro
@@ -6,7 +6,7 @@ import Portfolio from "../components/Portfolio.astro";
 import Offer from "../components/Offer.astro";
 ---
 
-<Layout title="Cogito Software | Fast-Track Your MVP">
+<Layout path="/mvp-offer" title="Cogito Software | Fast-Track Your MVP">
   <main class="relative min-h-screen bg-base-100 overflow-x-hidden">
     <Hero />
     <TechStack />
