--- a/src/pages/partnership.astro
+++ b/src/pages/partnership.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import { Check } from "@lucide/astro";
 ---
 
-<Layout title="Partnership | Cogito Software">
+<Layout path="/partnership" title="Partnership | Cogito Software">
   <main class="relative min-h-screen flex flex-col">
     <section
       class="grow flex items-center justify-center relative overflow-hidden py-20"
