--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,13 @@ import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Background from "../components/Background.astro";
+
+interface Props {
+  path?: string;
+  title?: string;
+}
+
+const { path = "/", title = "Cogito Software" }: Props = Astro.props;
 ---
 
 <!doctype html>
@@ -12,7 +19,7 @@ import Background from "../components/Background.astro";
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
-    <title>Cogito Software</title>
+    <title>{title}</title>
 
     <script is:inline>
       const theme = localStorage.getItem("theme") || "LIGHT";
@@ -21,7 +28,7 @@ import Background from "../components/Background.astro";
   </head>
   <body>
     <Background />
-    <Header />
+    <Header path={path} />
     <slot />
     <Footer />
   </body>
