--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,7 +5,7 @@ import Layout from "../layouts/Layout.astro";
 import ContactForm from "../components/ContactForm.svelte";
 ---
 
-<Layout title="Contact Us | Cogito Software">
+<Layout path="/contact" title="Contact Us | Cogito Software">
   <main class="pt-32 pb-20 min-h-screen flex flex-col">
     <div class="container mx-auto px-6 max-w-6xl grow">
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 lg:gap-16">
