--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,8 @@ import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Background from "../components/Background.astro";
+import MetaPixelCode from "../components/MetaPixelCode.astro";
+import Posthog from "../components/Posthog.astro";
 
 interface Props {
   path?: string;
@@ -25,6 +27,9 @@ const { path = "/", title = "Cogito Software" }: Props = Astro.props;
       const theme = localStorage.getItem("theme") || "LIGHT";
       document.documentElement.setAttribute("data-theme", theme);
     </script>
+
+    <Posthog />
+    <MetaPixelCode />
   </head>
   <body>
     <Background />
